cmake_minimum_required(VERSION 4.1.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
set(CMAKE_CXX_EXTENSIONS off)
message(STATUS "Building on ${CMAKE_BUILD_TYPE} mode...")
project(iris VERSION 0.0.1 LANGUAGES CXX)
file(GLOB_RECURSE IRIS_SOURCES "Source/*.cpp")
add_executable(iris)
target_sources(iris PRIVATE ${IRIS_SOURCES})
target_include_directories(iris PRIVATE C:\\LLVM\\Build\\include\\c++\\v1 C:\\LLVM\\Build\\lib\\clang\\22\\include)
target_link_directories(iris PRIVATE C:\\LLVM\\Build\\lib C:\\LLVM\\Build\\lib\\clang\\22\\lib\\windows)
target_compile_definitions(iris PRIVATE iris_major=0 iris_middle=0 iris_minor=1)
target_compile_features(iris PRIVATE cxx_std_26)
target_compile_options(iris PRIVATE -Werror -Wall -Wextra -Wpedantic -Wno-dollar-in-identifier-extension -Wno-bit-int-extension -fno-rtti -fno-exceptions)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(iris PRIVATE iris_debug=)
    target_compile_options(iris PRIVATE -O0 -g)
    target_link_options(iris PRIVATE -g)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    target_compile_options(iris PRIVATE -O3 -flto=full)
    target_link_options(iris PRIVATE -flto=full)
else()
    message(FATAL_ERROR "Unsupported build type.")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    target_compile_definitions(iris PRIVATE iris_windows=)
    target_compile_definitions(iris PRIVATE _UNICODE=)
    target_compile_options(iris PRIVATE -municode)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    target_compile_definitions(iris PRIVATE iris_linux=)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
    target_compile_definitions(iris PRIVATE iris_darwin=)
else()
    message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}. Iris currently supports Windows, Linux, and macOS.")
endif()
install(TARGETS iris RUNTIME DESTINATION bin)